# TrollPong

./: Makefile.am.bak  Makefile.in  aclocal.m4  configure  configure.ac  configure.ac.bak
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  pingpong
Debug/src/.deps/: ball.Po  main.Po  main_func.Po  score.Po
Debug/src/data/: Makefile  Makefile.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  ball.cc  ball.cc~  ball.h  ball.h~  main.cc  main.cc~  main_func.cxx  main_func.cxx~  main_func.h  main_func.h~  score.cc  score.cc~  score.h  score.h~
src/data/: Makefile.am  Makefile.am.bak  Makefile.in
